    * 0338 FIX: Introduce time limit on availability queries...
    * 0681 FIX: Display correct year for availability range for last month in january

    Event Console:
    * 0301 Handling messages of special syslog format correctly...
    * 0388 Moved Event Console related settings to own settings page...
    * 0710 Create a history entry for events that failed their target count...
    * 0303 FIX: Old log entries were shown in event history first...
    * 0304 FIX: Escaping several unwanted chars from incoming log messages...
    * 0089 FIX: CSV export of event console was broken...
    * 0359 FIX: Fixed exception in event simulator when one match group did not match
    * 0384 FIX: Trying to prevent problem when restarting mkeventd...
    * 0427 FIX: Fixed exception when handling connections from event unix socket...
    * 0679 FIX: Allow non-Ascii characters in generated events
    * 0680 FIX: Do not allow spaces in host names in event simulator...
    * 0672 FIX: Service item of "Check event state in event console" checks can now be configured...
    * 0590 FIX: mkeventd: fixed encoding of unicode characters in the snmptrap receiver...

    Livestatus:
    * 0337 New header for limiting the execution time of a query...
    * 0276 nagios4 livestatus support...
    * 0335 FIX: Parse state of downtime notification log entries correctly...
    * 0336 FIX: Limit the number of lines read from a single logfile...
    * 0344 FIX: Fix semantics of columns num_services_hard_*...

    Livestatus-Proxy:
    * 0263 FIX: livestatus log table: fixed missing logentries of archived logfiles...


1.2.3i7:
    Core & Setup:
    * 0011 Introduce optional lower limit for predicted levels...
    * 0217 FIX: More verbose error output for SNMP errors on the command line...
    * 0288 FIX: Error messages of datasource programs (e.g. VSphere Agent) are now visible within WATO...
    * 0010 FIX: Fix computation of hour-of-the-day and day-of-month prediction...