@@ -7336,7 +7336,7 @@ class CheckTypeGroupSelection(ElementSelection):
 
 
 #.
-#   .--Notifications-------------------------------------------------------.
+#   .--Notifications-(Rule Based)------------------------------------------.
 #   |       _   _       _   _  __ _           _   _                        |
 #   |      | \ | | ___ | |_(_)/ _(_) ___ __ _| |_(_) ___  _ __  ___        |
 #   |      |  \| |/ _ \| __| | |_| |/ __/ _` | __| |/ _ \| '_ \/ __|       |
