@@ -351,6 +351,7 @@
     * 0301 Handling messages of special syslog format correctly...
     * 0388 Moved Event Console related settings to own settings page...
     * 0710 Create a history entry for events that failed their target count...
+    * 0749 Allow to restrict visibility of events by their host contacts...
     * 0303 FIX: Old log entries were shown in event history first...
     * 0304 FIX: Escaping several unwanted chars from incoming log messages...
     * 0089 FIX: CSV export of event console was broken...
